tests/codegen/fail/unsupported_async_fn_dylib_build.ql
extern "c" pub fn q_export() -> Int {
    return 1
}

fn worker() -> Int {
    return 1
}

async fn helper() -> Int {
    return await worker()
}
