tests/codegen/fail/unsupported_async_fn_dylib_build.stderr
error: tests/codegen/fail/unsupported_async_fn_dylib_build.ql:9:7: LLVM IR backend foundation does not support `async fn` yet
  async fn helper() -> Int {
        ^^^^^^^^
